[gd_scene load_steps=10 format=2]

[ext_resource path="res://death_screen/death.png" type="Texture" id=1]
[ext_resource path="res://death_screen/Buttons/StartGameButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://death_screen/Buttons/ExitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://death_screen/Buttons/OptionsButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://death_screen/Buttons/Milestones.tscn" type="PackedScene" id=5]
[ext_resource path="res://death_screen/DeathScreen.gd" type="Script" id=6]
[ext_resource path="res://title_screen/FadeIn.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="DeathScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1138, -208 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 984.0
margin_bottom = 400.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 404.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_vertical = 3
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 984.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 2

[node name="StartGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 6.0
margin_right = 984.0
margin_bottom = 36.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 46.0
margin_right = 984.0
margin_bottom = 76.0

[node name="MilestonesButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 86.0
margin_right = 984.0
margin_bottom = 116.0

[node name="ExitGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 126.0
margin_right = 984.0
margin_bottom = 156.0

[node name="FadeIn" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn"]
anims/RESET = SubResource( 1 )
anims/fade_in = SubResource( 2 )

[connection signal="pressed" from="Menu/CenterRow/Buttons/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
[connection signal="animation_finished" from="FadeIn/AnimationPlayer" to="FadeIn" method="_on_AnimationPlayer_animation_finished"]
